--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- all of the content goes in here -->
-    <h1>Toy Story 4</h1>
+    <h1>Toy Story </h1>
   </body>
   <script src="./scripts.js"></script>
 </html>
