--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- all of the content goes in here -->
     
-    <div  class = "img1">
+    <div  class = "div1">
     <img  src = "images/toystory4_wallpaper.jpg"  alt = "image1"  >
     
     </div>
