--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- all of the content goes in here -->
     
     <div  class = "div1">
-    <img  src = "images/toystory4_wallpaper.jpg"  alt = "image1" class="img1" >
+    <img  src = "images/toystory4_wallpaper.jpg"  alt = "image1"  >
     
     </div>
   
