--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
     
     <div>
-    <p  class = "image2" > <img src = "images/toystory4_movie_poster.jpg" alt = "image2"> </p>   
+    <p  class = "img2" > <img src = "images/toystory4_movie_poster.jpg" alt = "image2"> </p>   
     <h1> Toy Story 4 </h1>
     </div>
     
