--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   
     
-    <div>
+    <div  class = "div2">
     <p  class = "img2" > <img src = "images/toystory4_movie_poster.jpeg" alt = "image2"> </p>   
     <h1> Toy Story 4 </h1>
     </div>
