--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
     
     <div  class = "div2">
-    <p  class = "img2" > <img src = "images/toystory4_movie_poster.jpeg" alt = "image2"> </p>   
+    <p   > <img src = "images/toystory4_movie_poster.jpeg" alt = "image2" class = "img2"> </p>   
     <h1> Toy Story 4 </h1>
     </div>
     
