--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     </div>
     
-    <div>
+    <div  class= "div2">
      <h2> Synopsis </h2>
      <hr>
      <p> Woody and the gang go on a road trip with new toy Forky, who's convinced he's trash and doesn't yet understand his role in the world. Along the way, Woody is unexpectedly reunited with <br> 
