--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         independent spirit Bo Peep and finds himself faced with a decision, and a future, he never imagined.</p>
     </div>
     
-    <div>
+    <div class= "div3">
     <h2> Characters </h2>
     <hr>
     </div>
