--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
      <hr>
       <div>   
       <h4> Woody </h4>
-      < p class = "p1"> < img src = "images/character_woody.jpg"  alt = "Woody" > </p>  
-      <p>  Played by [Tom Hanks](https://www.imdb.com/name/nm0000158/) <br>
+      < p class = "p1"> < img src = "images/character_woody.jpg"  alt = "Woody" >   
+       Played by [Tom Hanks](https://www.imdb.com/name/nm0000158/) <br>
        He is a vintage cowboy doll that originally belonged to a boy <br>
        named Andy Davis. As Andy's favorite since kindergarten, Woody <br>
        served as the leader of Andy's toys, a position he upheld by <br>
