--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
      <hr>
       <div>   
       <h4> Woody </h4>
-      < img src = "images/character_woody.jpg"  alt = "Woody" >   
-       <p>
+     <p>   
+     <img src = "images/toystory4_movie_poster.jpeg" alt = "image2" class = "img2" >    
+       
        Played by [Tom Hanks](https://www.imdb.com/name/nm0000158/) <br>
        He is a vintage cowboy doll that originally belonged to a boy <br>
        named Andy Davis. As Andy's favorite since kindergarten, Woody <br>
