--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2> Characters </h2>
       
     <hr>
-     
+    <h4> Woody </h4> 
     <img src = "images/character_woody.jpg" alt = "image3"  >
 
     </div>
