--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     <h2> Characters </h2>
       
     <hr>
+    <div>  
     <h4> Woody </h4> 
     <img src = "images/character_woody.jpg" alt = "image3"  >
-
+    </div>
     </div>
     
   </body>
