--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    
      <p  class = "img3" > <img src = "images/character_woody.jpg" alt = "image3" > </p>
       
-      <p> 
+      <p class="pImg3p"> 
        Played by Tom Hanks <br>
        He is a vintage cowboy doll that originally belonged to a boy <br>
        named Andy Davis. As Andy's favorite since kindergarten, Woody <br>
