--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
       <div>
      <p  class = "img4" > <img src = "images/character_buzz.jpg" alt = "image4" > </p>
      
+     <p  class = "pImg4"> 
+       Played by Tim Allen <br>
+       He is a spaceman action figure originally belonging to Andy <br>
+       Davis. Buzz was created during a time where astronauts were <br>
+       especially popular amongst children. His arrival in the original Toy <br>
+       Story created conflict with Andy's favorite toy Sheriff Woody,<br>
+       though this rivalry would eventually blossom into a lifelong friendship.
+       </p>   
         
       </div>
  </div>
