--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
        Davis. Buzz was created during a time where astronauts were <br>
        especially popular amongst children. His arrival in the original Toy <br>
        Story created conflict with Andy's favorite toy Sheriff Woody,<br>
-       though this rivalry would eventually blossom into a lifelong friendship.
+       though this rivalry would eventually blossom into a lifelong <br>
+       friendship.
        </p>   
         
       </div>
