--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
    
     <h3  class = "h3Right1" > Bo Peep </h3>
    
+      
+     <p  class = "img6" > <img src = "images/character_bopeep.jpg" alt = "image6" > </p>
+   
   
  </div>    
      
