--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
    
      <div> 
      <p  class = "img6" > <img src = "images/character_bopeep.jpg" alt = "image6" > </p>
+       
+     <p  class = "pImg6">
+       Played by Annie Potts
+
+       Bo is the romantic interest (later girlfriend) of Woody, providing a <br>
+       calm and loving comfort whenever he is overwhelmed. She is <br>
+       noted for using her shepherdess crook to hook her cowboy and <br>
+       bring him closer in a romantic way. In private, she is a great deal <br>
+       more daring with her words and actions, which Woody seems to <br>
+       be quite fond of. She and her sheep were bought along with the <br>
+       lamp not too long after Molly was born, due to the baby being <br>
+       scared of the dark, which "broke every toy's heart", according to Woody. The lamp comforted <br>
+       Molly and she would often have her hand lay on Bo's feet.
+       
+     </p>  
    
    </div> 
  </div>    
