--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
     <div class = "div4">
     <h2> Comments </h2>   
     <hr >
+    <p> How would you rate Toy Story 4 ? </p>
+    < input type = "text" class = "text" name="rate"> 
+    <input type="button" value="Rate it" class = "button">  
+      
     </div>
   </body>
   <script src="./scripts.js"></script>
