--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     <div class = "div4">
     <h2> Comments </h2>   
     <hr >
-    <p> How would you rate Toy Story 4 ? </p>
-    < input type = "text" class = "text" name="rate"> 
+    <p> How would you rate Toy Story 4 ? </p> 
+    <input type="text"  name="rate" maxlength="4" size="4"><br>  
     <input type="button" value="Rate it" class = "button">  
       
     </div>
