--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class = "div4">
     <h2> Comments </h2>   
     <hr >
-    <p> How would you rate Toy Story 4 ? </p> 
+    <p> How would you rate Toy Story 4 ? </p> <br>
     <input type="text"  name="rate" class ="text"><br><br><br>
     <input type="button" value="Rate it" class = "button">  
       
