--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <h2> Comments </h2>   
     <hr >
     <p> How would you rate Toy Story 4 ? </p> <br>
-    <form onsubmit ="src/myFonction()">  
+    <form onsubmit ="myFonction()">  
     <input type="text"  name="rate" class ="text"><br><br><br>
     <input type="button" value="Rate it" class = "button">  
       </form>  
